welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:17: error: Boolean does not take parameters
	else (speed>85) {
                        ^